--- a/package.json
+++ b/package.json
@@ -10,22 +10,46 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-firebase/app": "^15.4.0",
+    "@react-native-firebase/firestore": "^15.4.0",
+    "@react-native-firebase/storage": "^15.3.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@unimodules/core": "^7.1.2",
     "expo": "44.0.0",
-    "expo-google-app-auth": "^9.0.0",
-    "expo-image-picker": "^11.0.3",
-    "expo-status-bar": "~1.1.0",
+    "expo-application": "^4.2.2",
+    "expo-auth-session": "~3.5.0",
+    "expo-facebook": "~12.1.0",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-image-multiple-picker": "^4.4.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-media-library": "^14.2.0",
+    "expo-random": "~12.1.1",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "firebase": "^9.5.0",
+    "moment": "^2.29.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-deck-swiper": "^2.0.5",
     "react-native-dotenv": "^3.3.0",
+    "react-native-fbsdk-next": "^10.1.0",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-picker": "^4.10.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "tailwind-rn": "^3.0.1"
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "tailwind-rn": "^3.0.1",
+    "unimodules-permissions-interface": "^6.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
